tests/__snapshots__/api-toAcceptProps-generic-components-stderr.snap.txt
Error: Component accepts props of the given type.

  14 |   test("accepts the given props", () => {
  15 |     expect(GenericComponent).type.toAcceptProps({ a: 1, b: 2 });
  16 |     expect(GenericComponent).type.not.toAcceptProps({ a: 1, b: 2 }); // fail
     |                                       ~~~~~~~~~~~~~
  17 | 
  18 |     expect(GenericComponent<string>).type.toAcceptProps({ a: "one", b: "two" });
  19 |     expect(GenericComponent<string>).type.not.toAcceptProps({ a: "one", b: "two" }); // fail

       at ./__typetests__/generic-components.tst.tsx:16:39 ❭ when source is an expression ❭ accepts the given props

Error: Component accepts props of the given type.

  17 | 
  18 |     expect(GenericComponent<string>).type.toAcceptProps({ a: "one", b: "two" });
  19 |     expect(GenericComponent<string>).type.not.toAcceptProps({ a: "one", b: "two" }); // fail
     |                                               ~~~~~~~~~~~~~
  20 |   });
  21 | 
  22 |   test("does not accept the given props", () => {

       at ./__typetests__/generic-components.tst.tsx:19:47 ❭ when source is an expression ❭ accepts the given props

Error: Component does not accept props of the given type.

Type 'string' is not assignable to type 'number'.

  22 |   test("does not accept the given props", () => {
  23 |     expect(GenericComponent).type.not.toAcceptProps({ a: 1, b: "two" });
  24 |     expect(GenericComponent).type.toAcceptProps({ a: 1, b: "two" }); // fail: Type 'string' is not assignable to type 'number'
     |                                                         ~
  25 | 
  26 |     expect(GenericComponent<string>).type.not.toAcceptProps({ a: 1, b: 2 });
  27 |     expect(GenericComponent<string>).type.toAcceptProps({ a: 1, b: 2 }); // fail: Type 'number' is not assignable to type 'string'

       at ./__typetests__/generic-components.tst.tsx:24:57 ❭ when source is an expression ❭ does not accept the given props

    The expected type comes from property 'b' which is declared here on type 'IntrinsicAttributes & Props<number>' ts(6500)

       5 |   interface Props<T> {
       6 |     a: T;
       7 |     b: T;
         |     ~
       8 |   }
       9 | 
      10 |   function GenericComponent<T>(_props: Props<T>) {

           at ./__typetests__/generic-components.tst.tsx:7:5

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  25 | 
  26 |     expect(GenericComponent<string>).type.not.toAcceptProps({ a: 1, b: 2 });
  27 |     expect(GenericComponent<string>).type.toAcceptProps({ a: 1, b: 2 }); // fail: Type 'number' is not assignable to type 'string'
     |                                                           ~
  28 |   });
  29 | });
  30 | 

       at ./__typetests__/generic-components.tst.tsx:27:59 ❭ when source is an expression ❭ does not accept the given props

    The expected type comes from property 'a' which is declared here on type 'IntrinsicAttributes & Props<string>' ts(6500)

      4 | describe("when source is an expression", () => {
      5 |   interface Props<T> {
      6 |     a: T;
        |     ~
      7 |     b: T;
      8 |   }
      9 | 

          at ./__typetests__/generic-components.tst.tsx:6:5

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  25 | 
  26 |     expect(GenericComponent<string>).type.not.toAcceptProps({ a: 1, b: 2 });
  27 |     expect(GenericComponent<string>).type.toAcceptProps({ a: 1, b: 2 }); // fail: Type 'number' is not assignable to type 'string'
     |                                                                 ~
  28 |   });
  29 | });
  30 | 

       at ./__typetests__/generic-components.tst.tsx:27:65 ❭ when source is an expression ❭ does not accept the given props

    The expected type comes from property 'b' which is declared here on type 'IntrinsicAttributes & Props<string>' ts(6500)

       5 |   interface Props<T> {
       6 |     a: T;
       7 |     b: T;
         |     ~
       8 |   }
       9 | 
      10 |   function GenericComponent<T>(_props: Props<T>) {

           at ./__typetests__/generic-components.tst.tsx:7:5

Error: Type accepts props of the given type.

  39 |   test("accepts the given props", () => {
  40 |     expect<GenericComponent>().type.toAcceptProps({ a: 1, b: 2 });
  41 |     expect<GenericComponent>().type.not.toAcceptProps({ a: 1, b: 2 }); // fail
     |                                         ~~~~~~~~~~~~~
  42 |   });
  43 | 
  44 |   test("does not accept the given props", () => {

       at ./__typetests__/generic-components.tst.tsx:41:41 ❭ when source is a type ❭ accepts the given props

Error: Type does not accept props of the given type.

Type 'string' is not assignable to type 'number'.

  44 |   test("does not accept the given props", () => {
  45 |     expect<GenericComponent>().type.not.toAcceptProps({ a: 1, b: "two" });
  46 |     expect<GenericComponent>().type.toAcceptProps({ a: 1, b: "two" }); // fail: Type 'string' is not assignable to type 'number'
     |                                                           ~
  47 |   });
  48 | });
  49 | 

       at ./__typetests__/generic-components.tst.tsx:46:59 ❭ when source is a type ❭ does not accept the given props

    The expected type comes from property 'b' which is declared here on type 'IntrinsicAttributes & Props<number>' ts(6500)

      32 |   interface Props<T> {
      33 |     a: T;
      34 |     b: T;
         |     ~
      35 |   }
      36 | 
      37 |   type GenericComponent = <T>(props: Props<T>) => React.JSX.Element;

           at ./__typetests__/generic-components.tst.tsx:34:5

